smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/invalid-unquoted-shape-id.smithy
// Parse error at line 3, column 19 near `#\n`: Expected a valid identifier character, but found '#'

metadata abc = aa$#

namespace foo.baz
